# ChangeLog for games-emulation/sdlmame
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2

  20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.126.ebuild,
  +sdlmame-0.128.ebuild:
  Bumped. Removed oldest version.

  14 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.127_p7.ebuild,
  +sdlmame-0.127_p8.ebuild:
  Bumped. Removed previous version.

  09 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.127_p6.ebuild,
  +sdlmame-0.127_p7.ebuild:
  Bumped. Removed previous version.

  06 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.127_p5.ebuild,
  +sdlmame-0.127_p6.ebuild:
  Bumped. Removed previous version.

  30 Sep 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.127_p3.ebuild,
  +sdlmame-0.127_p5.ebuild:
  Bumped. Removed previous version.

  12 Sep 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.127_p2.ebuild,
  +sdlmame-0.127_p3.ebuild:
  Bumped. Removed previous version.

  07 Sep 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.127_p1.ebuild,
  +sdlmame-0.127_p2.ebuild:
  Bumped. Removed previous version.

  31 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> +sdlmame-0.127_p1.ebuild:
  Bumped.

  21 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.126_p4.ebuild,
  +sdlmame-0.127.ebuild:
  Bumped. Removed previous version.

  08 Aug 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.126_p3.ebuild,
  +sdlmame-0.126_p4.ebuild:
  Bumped. Removed previous version.

  31 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.126_p2.ebuild,
  +sdlmame-0.126_p3.ebuild:
  Bumped. Removed previous version.

  30 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.126_p1.ebuild,
  +sdlmame-0.126_p2.ebuild:
  Bumped. Removed previous version.

  20 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> +sdlmame-0.126_p1.ebuild:
  Bumped.

  07 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.125_p9.ebuild,
  +sdlmame-0.126.ebuild:
  Bumped. Removed previous version.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.125_p8.ebuild,