@@ -2,10 +2,6 @@ AUX joymap.dat 223 RMD160 d86c536a5d33bec9ecd6efbee2f7389835495328 SHA1 011d631b
 AUX mame.ini.in 5962 RMD160 6eb4c315b29d5e6da24a40ad94a646bb56b27998 SHA1 fadb0546bdac23e7162833fad60533c0a4fcf772 SHA256 6205c738b7e57ead9c05885bdaeb3ebfb143bec9dc1de7a97016b791bea532d8
 AUX vector.ini 116 RMD160 e63ed40b21a2426b28571d514933efab6ccce7e8 SHA1 c6615ce44d08b89a65435dfe7e0af9ac6d8459df SHA256 408aeaaffcb2ecccd20db457f22d2d5efa930c0f62a92987b0fbefaf6c038c23
 DIST sdlmame-manpages.tar.gz 14400 RMD160 14660470488458a8897a8a924c12f7ab961d6729 SHA1 279fbf37668282c0e4e86d62a29f5ec53fa0ab1a SHA256 507240258dfb816fbfddc674c5995a126c7a975158c2aad1ada8cb064c5e3d08
-DIST sdlmame0127.zip 16903248 RMD160 654802fc96bffe79d71999738074e23169334484 SHA1 e964cb669899c4183b8c4929fe1efe4bdb49e0eb SHA256 129a7fae313864e29290d0dd7de1164f940845fb24ad1307390d48a4f87dc8fb
-DIST sdlmame0127u8.zip 16978826 RMD160 6867f611cd0f38b61df36088b64199c49e1e805b SHA1 7047893e92f7e9c94fbe7310eea34cf179a98dee SHA256 c6ff7524f85ac83e4bc06e02dddefdc5575ee0a5d58f739798ba3d4a4216c709
 DIST sdlmame0128.zip 16970652 RMD160 40dee88d332d0d8ba627d4701898a8829d99bb64 SHA1 507edaaddc7e610998b44367fd59e71ae6116869 SHA256 fa0a3304640c6bd2f20b95e4528495ad00d348beb7b4b655802384663ba58174
-EBUILD sdlmame-0.127.ebuild 3890 RMD160 4527c30ae1a02d5c0d99e207507fae106e339a56 SHA1 f50ef0cd5675c0a0525e9ebba2c2821668e9fde0 SHA256 99747b216ea899d9705d60a149b145c338b441b0a337fdb334ae07a738a1e9df
-EBUILD sdlmame-0.127_p8.ebuild 3890 RMD160 4527c30ae1a02d5c0d99e207507fae106e339a56 SHA1 f50ef0cd5675c0a0525e9ebba2c2821668e9fde0 SHA256 99747b216ea899d9705d60a149b145c338b441b0a337fdb334ae07a738a1e9df
 EBUILD sdlmame-0.128.ebuild 3890 RMD160 4527c30ae1a02d5c0d99e207507fae106e339a56 SHA1 f50ef0cd5675c0a0525e9ebba2c2821668e9fde0 SHA256 99747b216ea899d9705d60a149b145c338b441b0a337fdb334ae07a738a1e9df
-MISC ChangeLog 5477 RMD160 ad4ecc49adbd93bee98a2b72d5f19d1f4bbf65d5 SHA1 18be15fd8fc791e0c58064ccd25f33c39e4ae5ad SHA256 053566c7d89513a9749f162b82e7278096acd1e0a3649343412015d5e1297aa4
+MISC ChangeLog 5602 RMD160 6a2e026b841a05eb4075ac7239ebc61c8016b848 SHA1 1bb4a2e2ec9e781b5832ec8ff6f352371ec148a6 SHA256 02f97e38cbf0a5800d5d03c7192c7e76cc6cee28ac367f50a72ebd3832a44d87
