@@ -1,6 +1,10 @@
 # ChangeLog for games-emulation/sdlmame
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 
+  30 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.127.ebuild,
+  -sdlmame-0.127_p8.ebuild:
+  Removed old versions.
+
   20 Oct 2008; Michał Ziąbkowski <mziab@o2.pl> -sdlmame-0.126.ebuild,
   +sdlmame-0.128.ebuild:
   Bumped. Removed oldest version.
